<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.signup.SignUpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/label_sign_up"
        android:textColor="@color/black100"
        android:textSize="@dimen/font_size_20"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_black_border"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/dimen_8"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:padding="@dimen/dimen_12"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline30" />

    <TextView
        android:id="@+id/tvUserNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:text="@string/msg_user_name_required"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCountrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/background_black_border"
        app:layout_constraintTop_toBottomOf="@+id/tvUserNameError">

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_12"
            android:prompt="@string/msg_select_country"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvCountryError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:text="@string/hint_select_country"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/clCountrySpinner"
        app:layout_constraintTop_toBottomOf="@+id/clCountrySpinner"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@+id/tvCountryError">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_black_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/dimen_8"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_12"
            android:textSize="@dimen/font_size_14"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivShowHidePassword"
            android:layout_width="@dimen/dimen_20"
            android:layout_height="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_14"
            android:src="@drawable/ic_close_eye"
            app:layout_constraintBottom_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="@+id/etPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:text="@string/msg_user_name_required"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/clPassword"
        app:layout_constraintTop_toBottomOf="@+id/clPassword"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordError">

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_black_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/dimen_8"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_12"
            android:textSize="@dimen/font_size_14"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivShowHideConfirmPassword"
            android:layout_width="@dimen/dimen_20"
            android:layout_height="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_14"
            android:src="@drawable/ic_close_eye"
            app:layout_constraintBottom_toBottomOf="@+id/etConfirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/etConfirmPassword"
            app:layout_constraintTop_toTopOf="@+id/etConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvConfirmPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:text="@string/msg_user_name_required"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/clConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/clConfirmPassword"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:background="@drawable/background_border_with_bottom_shadow"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_16"
        android:text="@string/label_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_14"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/clConfirmPassword" />

    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_30"
        android:text="@string/label_have_account"
        android:textColor="@color/black100"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:text="@string/label_login"
        android:textColor="@color/blue"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintBottom_toBottomOf="@+id/tvAlreadyHaveAccount"
        app:layout_constraintStart_toEndOf="@+id/tvAlreadyHaveAccount"
        app:layout_constraintTop_toTopOf="@+id/tvAlreadyHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>